[ticket/12553] Fix incorrect alignment in ACP responsive tables.
PHPBB3-12553

--- a/phpBB/adm/style/admin.css
+++ b/phpBB/adm/style/admin.css
@@ -987,6 +987,10 @@ table.fixed-width-table {
 		margin-bottom: 1px;
 	}
 
+	.rtl table.responsive td {
+		text-align: right !important;
+	}
+
 	table.responsive td.empty {
 		display: none !important;
 	}
@@ -1005,6 +1009,10 @@ table.fixed-width-table {
 		float: left;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
+	}
+
+	.rtl table.responsive.two-columns td {
+		float: right;
 	}
 
 	table.responsive.two-columns td:nth-child(2n+1) {
